# mlops

./: README.md  docker-compose.yml  mlops.py
mlops/: Dockerfile  api.py  database.py  mlops.py  modelClass.py  pyproject.toml  requirements.txt  tests.py
mlops/data/: boston.csv
mlops/saved_models/: defaultRidge.pkl  defaultRidge_columns.pkl
