[tool.poetry]
name = "mlops-poetry"
version = "0"
description = "mlops task 1"
authors = ["Raeva Anastasia"]
license = "-"
readme = "README.md"
packages = [{include = "mlops_poetry"}]

[tool.poetry.dependencies]
python = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
